Version 0.2.3
------------------------------------------------------------------------------
29 November 2007
+ Shortened urls
+ added sort button to feed listing.
+ Updated: templates/admin_feeds.tpl

25 October 2007
+ Added error check on feed listing.

Version 0.2.2
------------------------------------------------------------------------------
12 September 2007
+ Added line of code to Feed to prevent error on bad data.

Version 0.2.1
-------------------------------------------------------------------------------
22 August 2007
+ Changed rss popup window dimensions and form text length

Version 0.2.0 -- 25 July 2007
-------------------------------------------------------------------------------
8 June 2007
+ updated locale

22 May 2007
+ RSS 2.0 is now useable.
+ Added settings page for some of the RSS 2.0 options
+ Removed a header line that caused some verification errors in the 2.0 template.
+ Changed template process. Some fields were missing from the feeds.

Version 0.1.4
-------------------------------------------------------------------------------
5 April 2007
+ Add German translation files.
+ Updated language functions.

5 March 2007
+ Changed control panel icon

Version 0.1.3
-------------------------------------------------------------------------------
19 February 2007
+ Added translate functions.

Version 0.1.2
-------------------------------------------------------------------------------
8 November 2006
+ Added some error checks to feed translation.

3 November 2006
+ Fixed an issue with mod_rewrite urls that could corrupt the feed

Version 0.1.1
-------------------------------------------------------------------------------
2 November 2006
+ Channel title is now linked to feed
+ Added mod_rewrite formatting to feed