@@ -1,3 +1,6 @@
+3 January 2008
++ Fixed the timeout setting for the rss caching.
+
 Version 0.2.3
 ------------------------------------------------------------------------------
 29 November 2007
